tests/error/modifier_errors/ctrl_arg_type.err
Error: Type mismatch (at $FILE:9:20)
  | 
7 | def test() -> None:
8 |     x = qubit()
9 |     with control(x, True):
  |                     ^^^^ Expected expression of type `qubit`, got `bool`

Guppy compilation failed due to 1 previous error
